--- a/css3.css
+++ b/css3.css
@@ -1,6 +1,6 @@
 body{
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(239, 239, 239);
     margin: 0px;
     padding: 0px;
     position: absolute;
@@ -55,7 +55,7 @@ body{
 }
 .heading{
     position: absolute;
-    top:8%;
+    top:4.5%;
     text-align: center;
     margin-left: 32%;
     color:gray;
@@ -68,7 +68,7 @@ body{
     content: "";
     display: block;
     width: 100%;
-    height: 18.2%;
+    height: 11.7%;
     background-color: rgb(8, 20, 49);
     position: absolute;
     top:90px;
@@ -77,7 +77,7 @@ body{
 }
 .heading2{
     position: absolute;
-    top: 13%;
+    top: 8%;
     text-align: center;
     margin-left: 42%;
     color:white;
@@ -106,7 +106,7 @@ body{
     margin-top: 120px;
 }
 #body3{
-    background-color: rgb(255, 255, 255);
+
     width: 80%;
     height: 500px;
     margin: 100px;
@@ -189,6 +189,7 @@ text-align: center;
 }
 .body5{
     margin: 100px;
+    height: 1000px;
 }
 .a{
     color: rgba(8, 20, 49);
@@ -291,7 +292,158 @@ text-align: center;
 .f .k{
     width: 30px;
     height: 30px;
-    border: 1px solid rgb(227, 187, 30);;
+    border: 1px solid rgb(227, 187, 30);
     border-radius: 50%;
-    background-color: rgb(227, 187, 30);;
+    background-color: rgb(227, 187, 30);
 }
+.body6{
+    background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-4.jpg);
+     /*background-image: url(./images/img-3.jpg);*/
+     height: 400px;   
+ }
+ .head2{
+    float: left;
+    display: flex;
+    margin-top: 42px;
+    margin-left: 17%;
+    width: 1200px;
+ }
+ .one1{
+    margin:60px;
+    text-align: center; 
+}
+.one1 p{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+.one1 a{
+   color: rgb(220, 216, 216);
+}
+.one1 img{
+   width: 120px;
+   height: 120px;
+   border: 0px;
+   border-radius: 90%;
+}
+#one1 p,#one1 a{
+    color: rgb(227, 187, 30);
+}
+.body7{
+    height: 700px; 
+    margin-top: 20px;
+}
+.sec1{
+    text-align: center;
+    
+}
+.sec1 h1{
+    color: rgb(152, 150, 150);
+}
+.sec1 p{
+    color: rgb(167, 160, 160);
+}
+.bold1{
+    color: rgb(34, 61, 122);
+}
+.sec2{
+    float: left;
+    display: flex;
+    width: 1100px;
+    margin-left: 200px;
+}
+.one2{
+    margin: 30px;
+    width: 600px;
+    height: 450px;
+    border: 1px solid rgb(237, 231, 231);
+    text-align: center;
+    color: rgb(166, 158, 158);
+    background-color: white;
+}
+.one2 p{
+    font-size: 25px;
+    font-weight: bolder;
+    color: rgb(34, 61, 122);
+}
+.box{
+    width: 150px;
+    height: 50px;
+    border: 1px solid rgb(34, 61, 122);
+    text-align: center;
+    border-radius: 50px;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(34, 61, 122);
+    border-width: 2px;
+}
+.light{
+    color: rgb(216, 212, 212);
+}
+.small{
+    font-size: small;
+}
+#box{
+    background-color: rgb(227, 187, 30);
+    color: white;
+}
+.body8{
+    background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-3-1.jpg);
+     /*background-image: url(./images/img-3.jpg);*/
+     height: 500px;   
+ }
+ .head3{
+    float: left;
+    display: flex;
+    margin-left: 220px;
+    font-size: 30px;
+ }
+ .span{
+    margin-left: 800px;
+ }
+ .head3 p{
+    color: rgb(196, 189, 189);
+ }
+ .bi{
+    font-weight: bolder;
+    color: white;
+ }
+ .span1{
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgb(227, 187, 30);
+ }
+ .span{
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgb(34, 61, 122);
+ }
+ .head4 p{
+    margin-top: 100px;
+    margin-left: 220px;
+    color: rgb(196, 189, 189);
+ }
+ .head5{
+    float: left;
+    display: flex;
+    margin-left: 200px;
+    color: rgb(196, 189, 189);
+ }
+ .one3 img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+ }
+ .one3{
+    text-align: center;
+    width: 550px;
+    margin: 20px;
+ }
+ .name{
+    font-size: larger;
+    color: white;
+ }
