--- a/css3.css
+++ b/css3.css
@@ -8,44 +8,54 @@ body{
 #body1{
     background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 70px;
-    margin: 0px;
-    padding: 0px;
+    height: 50px;
 }
 #body2{
-    background-image: linear-gradient(0deg,transparent,rgb(255,166,0,0.5));
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    bottom: 100px;
-    position:static;
+    background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-1-2.jpg);
+    /*background-image: url(./images/img-3.jpg);*/
+    height: 700px;   
 }
 #logo{
     height: 50px;
     width:100px;
-    margin: 20px;
+
     margin-left: 200px;
     position: absolute;
 }
 .top{
-    left: 760px;
+    left: 770px;
     position: relative;
     float: left;
-    margin-top: 15px;
     padding-left: 20px;
     padding-right: 20px;
     color: rgb(0, 0, 0);
     font-size: 10px;
 }
-.mainhead{
-    top:20px;
-    font-weight: bold;
+.top img{
+    margin-top: -1px;
+    height: 51px;
 }
+.d1{
+    color: rgb(255, 255, 255);
+}
+.mainhead{
+    font-weight: bold;
+    font-size: small;
+    margin-top: 20px;
+}
+
 #body2 {
     font-size: 50px;
-    margin-top: 20px;
+
     text-align: center;
+
+}
+#e1{
+  width: 40px;
+  height: 48.5px;
+  border: 1px solid rgb(248, 242, 242);
+  background-color: rgb(248, 242, 242);
+  text-align: center;
 }
 #bimage{
     width: 100%;
@@ -53,57 +63,44 @@ body{
     margin: 0px;
     padding: 0px;
 }
-.heading{
-    position: absolute;
-    top:4.5%;
-    text-align: center;
-    margin-left: 32%;
-    color:gray;
-    font-size: 50px;
-}
 .bold{
     color: white;
 }
-.img::after{
-    content: "";
-    display: block;
-    width: 100%;
-    height: 11.7%;
-    background-color: rgb(8, 20, 49);
+.head0{
     position: absolute;
-    top:90px;
-    left: 0;
-    opacity: 0.9;
+    color: rgb(157, 148, 148);
+    margin-top: 210px;
+    margin-left: 470px;
 }
 .heading2{
     position: absolute;
-    top: 8%;
+    top: 7.2%;
     text-align: center;
-    margin-left: 42%;
-    color:white;
+    margin-left: 40%;
+    color:rgb(157, 148, 148);
     font-size: 15px;
 }
 .bix{
-    font-size: 20px;
-    width: 90px;
-    height: 20px;
-    border: 1px solid white;
-    background-color: rgb(246, 227, 60);
+    width: 150px;
+    height: 50px;
+    border: 1px solid rgb(255, 255, 255);
+    text-align: center;
     border-radius: 50px;
-    color: white;
-}
-.bix1{
-    font-size: 20px;
-    width: 90px;
-    height: 20px;
-    border: 1px solid white;
-    border-radius: 50px;
-    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    border-width: 2px;
+    margin: 10px;
+    background: none;
 }
 .heading2 img{
     height: 10px;
     width: 20px;
-    margin-top: 120px;
+    margin-top: 100px;
+}
+#f1{
+    background-color: rgb(227, 187, 30);
+    border: 1px solid rgb(227, 187, 30);
 }
 #body3{
 
@@ -112,6 +109,15 @@ body{
     margin: 100px;
     display: flex;
     margin-top: 100px;
+    margin-left: 160px;
+}
+.i1{
+    float: left;
+    display: flex;
+}
+.sub img{
+    width: 40px;
+    height: 40px;
 }
 .text{
     font-size: 20px;
@@ -120,7 +126,7 @@ body{
 .text1 img{
     height: 450px;
     width: 600px;
-    margin-left: 200px;
+    margin-left: 70px;
     margin-top: 50px;
 }
 .head{
@@ -131,6 +137,13 @@ body{
     margin-left: 20px;
     font-weight: bold;
     color: black;
+}
+.sub p{
+display: flex;
+margin-bottom: 40px;
+}
+.j1{
+    width: 400px;
 }
 .body4{
    background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-2.jpg);
@@ -188,7 +201,7 @@ text-align: center;
     background-color: rgb(227, 187, 30);
 }
 .body5{
-    margin: 100px;
+    margin-left: 220px;
     height: 1000px;
 }
 .a{
@@ -233,16 +246,45 @@ text-align: center;
 }
 .d img{
     height: 200px;
-    width: 150px;
+    width: 200px;
     margin: 20px;
 }
 .e img{
     height: 440px;
-    width: 400px;
+    width: 320px;
 }
 .f img{
     height: 200px;
-    width: 400px;
+    width: 320px;
+}
+.o{
+    background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/2-min-1.jpg);
+    height: 200px;
+    width: 320px;
+    margin-top: 20px;
+    margin-left: 20px;
+    text-align: center;
+    background-repeat: no-repeat;
+}
+#g{
+    margin-left: 20px;
+}
+.image p{
+    position: absolute;
+    color: rgb(255, 255, 255);
+    margin-left: 140px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgb(227, 187, 30);
+    border-radius: 50px;
+    text-align: center;
+    background-color:rgb(227, 187, 30) ;
+}
+.image h2{
+    color: white;
+}
+.image a{
+    color: rgb(144, 144, 144);
 }
 .g{
     float: left;
@@ -251,7 +293,7 @@ text-align: center;
     margin-top: -25px;
 }
 .g .f{
-    margin-left: 340px;
+    margin-left: 260px;
     margin-top: -198px;
 }
 .g .e{
@@ -268,34 +310,8 @@ text-align: center;
 #f{
     margin-left: 40px;
 }
-.image::after{
-    content: "";
-    display: block;
-    width: 25%;
-    height: 5%;
-    background-color: rgb(8, 20, 49);
-    position: absolute;
-    top:2637.5px;
-    left: 37.75%;
-    opacity: 0.9;
-}
-.f p{
-    position: absolute;
-    margin-top: -180px;
-    color: white;
-    margin-left: 140px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.f .k{
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgb(227, 187, 30);
-    border-radius: 50%;
-    background-color: rgb(227, 187, 30);
-}
+
+
 .body6{
     background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-4.jpg);
      /*background-image: url(./images/img-3.jpg);*/
@@ -304,12 +320,12 @@ text-align: center;
  .head2{
     float: left;
     display: flex;
-    margin-top: 42px;
-    margin-left: 17%;
-    width: 1200px;
+    margin-top: 12px;
+    margin-left: 9%;
+    width: 1300px;
  }
  .one1{
-    margin:60px;
+    margin:90px;
     text-align: center; 
 }
 .one1 p{
@@ -344,13 +360,13 @@ text-align: center;
     color: rgb(167, 160, 160);
 }
 .bold1{
-    color: rgb(34, 61, 122);
+    color: rgb(19, 37, 80);
 }
 .sec2{
     float: left;
     display: flex;
     width: 1100px;
-    margin-left: 200px;
+    margin-left: 190px;
 }
 .one2{
     margin: 30px;
@@ -386,6 +402,7 @@ text-align: center;
 #box{
     background-color: rgb(227, 187, 30);
     color: white;
+    border: 1px solid;
 }
 .body8{
     background: linear-gradient(rgba(8, 20, 49,0.9),rgba(14, 26, 83, 0.8)), url(./images/img-3-1.jpg);
@@ -447,3 +464,109 @@ text-align: center;
     font-size: larger;
     color: white;
  }
+ .body9{
+    margin-left: 220px;
+    height: 550px;
+ }
+ .head6 h1{
+    color:rgb(134, 133, 133);
+ }
+ .head6 p{
+    color:rgb(134, 133, 133);
+ }
+ .head7{
+    float: left;
+    display: flex;
+    margin-left: -20px;
+ }
+ .one4{
+    margin: 20px;
+    width: 320px;
+    height: 350px;
+    border: 1px solid rgb(196, 196, 196);
+    border-radius: 10px;
+    background-color: white;
+ }
+ .one4 img{
+    height: 150px;
+    width: 320px;
+    border-radius: 10px 10px 0px 0px;
+ }
+.one4 p{
+ margin: 20px;
+ color: rgb(34, 61, 122);
+}
+.one4 a{
+ margin: 20px;
+ color: rgb(134, 133, 133);
+ font-size: small;
+}
+.one4 button{
+    margin-top: 70px;
+    margin: 20px;
+}
+.body10{
+    height: 450px;
+    background-color: rgb(34, 61, 122);
+}
+.head8 img{
+    height: 50px;
+    width: 100px;
+    margin-left: 218px;
+}
+.head9{
+    float: left;
+    display: flex;
+    margin-left: 114px;
+}
+.one5{
+    margin: 105px;
+}
+.one5 p{
+    font-size: large;
+    font-weight: bold;
+    color: white;
+}
+.one5 a{
+    color: white;
+    font-size: 10px;
+    line-height: 20px;
+}
+.one5 img{
+    height: 30px;
+    width: 30px;
+}
+.ab{
+    height: 30px;
+    width: 180px;
+    border: 1px solid rgb(34, 61, 122);
+    border-radius: 20px;
+    background-color: white;
+
+}
+.ab img{
+    margin-left: 120px;
+    border-radius: 0px 20px 20px 0px;
+    margin-top: -5px;
+}
+.ab a{
+ display: flex;
+ margin-top: 5px;
+ margin-left: 10px;
+ color: rgb(88, 89, 89);
+}
+.head10{
+    height: 0.5px;
+    width: 71.8%;
+    border: 0 none;
+    background-color: rgb(196, 196, 196);
+    opacity: 0.3;
+    margin-top: 300px;
+    margin-left: 210px;
+}
+.head10 a{
+    text-align: center;
+    color: rgb(196, 196, 196);
+    margin-left: 200px;
+    font-size: small;
+}
